lavfi/scale: Pass src_range and dst_range to libswscale.

Fixes ticket #4812.